clean routes
