# BackEnd/src/Controller/RoutesController.php
@@ -2,33 +2,51 @@
 
 namespace App\Controller;
 
+use App\Repository\AnalyticCodeRepository;
+use App\Validator\RoutesRequestValidator;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
+use Symfony\Component\Messenger\Exception\ExceptionInterface;
 use Symfony\Component\Routing\Attribute\Route;
 use Symfony\Component\HttpFoundation\Request;
 use App\Repository\DistanceRepository;
 use App\Service\RouteCalculatorService;
+use App\Message\AnalyticDistanceMessage;
+use Symfony\Component\Messenger\MessageBusInterface;
+use Symfony\Component\Uid\Uuid;
 
 final class RoutesController extends AbstractController
 {
-    #[Route('/routes', name: 'app_routes', methods: ['GET'])]
+    /**
+     * @throws ExceptionInterface
+     */
+    #[Route('/routes', name: 'app_routes', methods: ['POST'])]
     public function index(
         Request $request,
         DistanceRepository $distanceRepo,
-        RouteCalculatorService $routeCalculator
+        RouteCalculatorService $routeCalculator,
+        MessageBusInterface $bus,
+        AnalyticCodeRepository $codeRepo,
+        RoutesRequestValidator $validator
     ): JsonResponse {
-        $start = $request->query->get('start');
-        $end = $request->query->get('end');
+        $data = json_decode($request->getContent(), true);
 
-        if (!$start || !$end) {
-            return $this->json(['error' => 'Missing parameters'], 400);
+        $fromStationId = $data['fromStationId'] ?? null;
+        $toStationId = $data['toStationId'] ?? null;
+        $analyticCodeStr = $data['analyticCode'] ?? null;
+
+        $errors = $validator->validate($data);
+        if (!empty($errors)) {
+            return new JsonResponse($errors[0], 400);
         }
 
         $distances = $distanceRepo->findAll();
         $graph = $routeCalculator->buildGraph($distances);
 
-        $result = $routeCalculator->shortestPath($graph, $start, $end);
+        $result = $routeCalculator->shortestPath($graph, $fromStationId, $toStationId);
         $path = $result['path'];
+        $totalDistance = round($result['distance'], 2);
+
 
         $segments = [];
         for ($i = 0; $i < count($path) - 1; $i++) {
@@ -39,10 +57,26 @@ final class RoutesController extends AbstractController
             ];
         }
 
+        $analyticCode = $codeRepo->findOneBy(['code' => $analyticCodeStr]);
+        if ($analyticCode) {
+            // TODO ASYNC MESSAGE
+            $bus->dispatch(new AnalyticDistanceMessage(
+                $totalDistance,
+                $analyticCode->getId()
+            ));
+        }
+
+        $id = Uuid::v4();
+
         return $this->json([
+            'id' => (string)$id,
+            'fromStationId' => $fromStationId,
+            'toStationId' => $toStationId,
+            'analyticCode' => $analyticCodeStr,
+            'distanceKm' => round($totalDistance ,2),
             'path' => $path,
             'segments' => $segments,
-            'totalDistance' => round($result['distance'], 2)
+            'createdAt' => (new \DateTimeImmutable())->format('c')
         ]);
     }
 
